[gd_scene load_steps=8 format=2]

[ext_resource path="res://client/fonts/DelaGothicOne-24.tres" type="DynamicFont" id=1]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=2]
[ext_resource path="res://client/menu/lobby/name_entry.gd" type="Script" id=3]
[ext_resource path="res://client/ui/title_label.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://client/ui/custom_label.tscn" type="PackedScene" id=6]
[ext_resource path="res://client/fonts/DelaGothicOne-48.tres" type="DynamicFont" id=7]

[node name="NameEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 1900.0
margin_bottom = 111.0
text = "Multiplayer"

[node name="Menu" type="Control" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/Menu/CenterContainer"]
margin_left = 594.0
margin_top = 376.0
margin_right = 1305.0
margin_bottom = 569.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_right = 711.0
margin_bottom = 70.0
size_flags_horizontal = 2
size_flags_vertical = 5
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/NameContainer"]
margin_right = 181.0
margin_bottom = 70.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Name:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/NameContainer"]
margin_left = 211.0
margin_right = 711.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
size_flags_horizontal = 8
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 24
placeholder_text = "Enter name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 120.0
margin_right = 711.0
margin_bottom = 193.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" parent="VBoxContainer/Menu" instance=ExtResource( 6 )]
visible = false
anchor_top = 1.0
margin_top = -70.0
custom_colors/font_color = Color( 0.839216, 0.141176, 0.0666667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Error text!"
align = 1
valign = 1

[node name="InfoMessage" parent="VBoxContainer/Menu" instance=ExtResource( 6 )]
visible = false
anchor_top = 1.0
margin_top = -70.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Info text!"
align = 1
valign = 1

[node name="BackButton" parent="VBoxContainer/Menu" instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = 177.0
margin_bottom = 5.0
label = "Back"
alignment = 1

[connection signal="pressed" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/BackButton" to="." method="_on_BackButton_pressed"]
